// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<components><Autocomplete - renders component 1`] = `
<input
  class="sc-bxivhb kUxKBM"
  type="text"
  value=""
>
  
</input>
`;

exports[`<components><Autocomplete> - showSuggestions no 1`] = `
<input
  className="sc-bxivhb kUxKBM"
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  type="text"
  value=""
/>
`;
